altered routes/index.js and POST & GET functions
