# routes/pets.js
@@ -1,14 +1,14 @@
 const routes = require('express').Router();
-const petController = require('../controllers/pets')
+const petController = require('../controllers/pets');
 
-routes.get('/all-pets', petController.getAllPets);
+// routes.get('/all-pets', petController.getAllPets);
 
-routes.get(`/pet/:id`, petController.getSinglePet);
+// routes.get(`/pet/:id`, petController.getSinglePet);
 
-routes.post('/create/pet', petController.createPet);
+// routes.post('/create/pet', petController.createPet);
 
-routes.put(`/update/pet/:id`, petController.updatePet);
+// routes.put(`/update/pet/:id`, petController.updatePet);
 
-routes.delete(`/delete/pet/:id`, petController.deletePet);
+// routes.delete(`/delete/pet/:id`, petController.deletePet);
 
-module.exports = routes
+module.exports = routes;
