# routes/recipes.js
@@ -1,14 +1,14 @@
 const routes = require('express').Router();
-const recipeContoller = require('../controllers/recipes')
+const recipeContoller = require('../controllers/recipes');
 
-routes.get('/all-recipes', recipeContoller.getAllRecipes);
+// routes.get('/all-recipes', recipeContoller.getAllRecipes);
 
-routes.get(`/recipe/:id`, recipeContoller.getSingleRecipe);
+// routes.get(`/recipe/:id`, recipeContoller.getSingleRecipe);
 
-routes.post('/create/recipe', recipeContoller.createRecipe);
+// routes.post('/create/recipe', recipeContoller.createRecipe);
 
-routes.put(`/update/recipe/:id`, recipeContoller.updateRecipe);
+// routes.put(`/update/recipe/:id`, recipeContoller.updateRecipe);
 
-routes.delete(`/delete/recipe/:id`, recipeContoller.deleteRecipe);
+// routes.delete(`/delete/recipe/:id`, recipeContoller.deleteRecipe);
 
 module.exports = routes;
