# swagger.json
@@ -5,11 +5,9 @@
     "description": "Restaurant API",
     "version": "1.0.0"
   },
-  "host": "localhost:3030",
+  "host": "pets-meal-planner-cse341-3wy5.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["https"],
   "tags": [
     {
       "name": "User"
@@ -37,9 +35,7 @@
     },
     "/all-users": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "responses": {
           "200": {
@@ -50,9 +46,7 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -71,9 +65,7 @@
     },
     "/create/user": {
       "post": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "responses": {
           "default": {
@@ -84,9 +76,7 @@
     },
     "/update/user/{id}": {
       "put": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -105,9 +95,7 @@
     },
     "/delete/user/{id}": {
       "delete": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -126,9 +114,7 @@
     },
     "/all-pets": {
       "get": {
-        "tags": [
-          "Pets"
-        ],
+        "tags": ["Pets"],
         "description": "",
         "responses": {
           "default": {
@@ -139,9 +125,7 @@
     },
     "/pet/{id}": {
       "get": {
-        "tags": [
-          "Pets"
-        ],
+        "tags": ["Pets"],
         "description": "",
         "parameters": [
           {
@@ -160,9 +144,7 @@
     },
     "/create/pet": {
       "post": {
-        "tags": [
-          "Pets"
-        ],
+        "tags": ["Pets"],
         "description": "",
         "responses": {
           "default": {
@@ -173,9 +155,7 @@
     },
     "/update/pet/{id}": {
       "put": {
-        "tags": [
-          "Pets"
-        ],
+        "tags": ["Pets"],
         "description": "",
         "parameters": [
           {
@@ -194,9 +174,7 @@
     },
     "/delete/pet/{id}": {
       "delete": {
-        "tags": [
-          "Pets"
-        ],
+        "tags": ["Pets"],
         "description": "",
         "parameters": [
           {
@@ -215,9 +193,7 @@
     },
     "/all-recipes": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "description": "",
         "responses": {
           "default": {
@@ -228,9 +204,7 @@
     },
     "/recipe/{id}": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "description": "",
         "parameters": [
           {
@@ -249,9 +223,7 @@
     },
     "/create/recipe": {
       "post": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "description": "",
         "responses": {
           "default": {
@@ -262,9 +234,7 @@
     },
     "/update/recipe/{id}": {
       "put": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "description": "",
         "parameters": [
           {
@@ -283,9 +253,7 @@
     },
     "/delete/recipe/{id}": {
       "delete": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "description": "",
         "parameters": [
           {
@@ -304,9 +272,7 @@
     },
     "/all-meal-plans": {
       "get": {
-        "tags": [
-          "Meal Plans"
-        ],
+        "tags": ["Meal Plans"],
         "description": "",
         "responses": {
           "default": {
@@ -317,9 +283,7 @@
     },
     "/meal-plan/{id}": {
       "get": {
-        "tags": [
-          "Meal Plans"
-        ],
+        "tags": ["Meal Plans"],
         "description": "",
         "parameters": [
           {
@@ -338,9 +302,7 @@
     },
     "/create/meal-plan": {
       "post": {
-        "tags": [
-          "Meal Plans"
-        ],
+        "tags": ["Meal Plans"],
         "description": "",
         "responses": {
           "default": {
@@ -351,9 +313,7 @@
     },
     "/update/meal-plan/{id}": {
       "put": {
-        "tags": [
-          "Meal Plans"
-        ],
+        "tags": ["Meal Plans"],
         "description": "",
         "parameters": [
           {
@@ -372,9 +332,7 @@
     },
     "/delete/meal-plan/{id}": {
       "delete": {
-        "tags": [
-          "Meal Plans"
-        ],
+        "tags": ["Meal Plans"],
         "description": "",
         "parameters": [
           {
